.provarCaches/00D5f000005vwGkEAI/objects/rstkf__Report_Group__c.object
<CustomObject>
    <fields>
        <fullName>rstkf__Access_Token_URL__c</fullName>
        <defaultValue>&apos;https://login.microsoftonline.com/common/oauth2/token&apos;</defaultValue>
        <label>Access Token URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__Access_Token__c</fullName>
        <label>Access Token</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__Authorization_URL__c</fullName>
        <defaultValue>&apos;https://login.windows.net/common/oauth2/authorize&apos;</defaultValue>
        <label>Authorization URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__Public_Group_Name__c</fullName>
        <label>Public Group Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__Resource_URI__c</fullName>
        <defaultValue>&apos;https://analysis.windows.net/powerbi/api&apos;</defaultValue>
        <label>Resource URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__Token_Expires_On__c</fullName>
        <label>Token Expires On</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Report Group</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <columns>NAME</columns>
        <columns>rstkf__Public_Group_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RG-{000000}</displayFormat>
        <label>Report Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>